# pyCGMapPol

./: requirements.txt  setup.cfg  setup.py
examples/01-RUN_PE/: PECG3.inp  PECG3_CG.xml  index_CG.ndx  settings_cg.xml  settings_map.xml  topo_CG.psf  topo_CG.top
examples/01-RUN_PE/01-PREPROCESS_GROFILES/: 00-script_AA_renameatoms.py  PE102_40Ch_residues_noH_replicate.top  conf_label.gro  conf_label.top  confout.part0001.gro  mdout.mdp  topol.tpr
examples/02-RUN_iPP/: iPPCG3.inp  iPPCG3.xml  iPPCG3_CG.xml  index_CG.ndx  settings_cg.xml  settings_map.xml  topo_CG.psf  topo_CG.top
examples/02-RUN_iPP/01-PREPROCESS_GROFILES/: 00-script_AA_renameatoms.py  conf_label.gro_tmp  conf_label.top_tmp  confout.part0001.gro  iPP_51mon_40Ch_residues_noH_replicate.top  mdout.mdp  minim.mdp  topol.tpr
examples/03-RUN_PE-iPP_block/: PE-iPP_block_CG3.inp  iblock.xml  iblock_CG.xml  index_CG.ndx  settings_cg.xml  settings_map.xml  topo_CG.psf  topo_CG.top
examples/03-RUN_PE-iPP_block/01-PREPARE/: 00-head_tail.sh  01-improper.sh  01-topology_script.py  PE24iPP24_model.xsd  PE24iPP24_model_residues.gro  impropers.ndx
examples/03-RUN_PE-iPP_block/02-REPLICATE_1_1_1/: PE24iPP24_model_residues_noH.gro  PE24iPP24_model_residues_noH.top  PE24iPP24_model_residues_noH_replicate.top  allatom_idx_replicate
examples/03-RUN_b/: PE-iPP_block_CG3.inp
examples/04-RUN_BLEND/: README.txt
pyCGMapPol/: __init__.py  pyCGMapPol.py
pyCGMapPol.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
pyCGMapPol_lib/: CGSystemClass.py  logger.py  parse_arguments.py
(+32 files in other folders)
