[metadata]
name = pyCGMapPol
description = Python script for mapping an atomistic trajectory of polymer systems
long_description = file: README.md
author = Javier Ramos
author_email = jrdcasa@gmail.com

[options]
packages = find:
test_suite = tests
include_package_data = true

[options.packages.find]
exclude =
    docs
    tests
    dist
    build

[options.entry_points]
console_scripts =
    pyCGMapPol = pyCGMapPol:main

[bdist_wheel]
universal = true
